--- a/CatApiMeow/src/app/templates/search.component.html
+++ b/CatApiMeow/src/app/templates/search.component.html
@@ -1,8 +1,7 @@
-<!--<mat-form-field>-->
-  <!--<mat-label>Favorite Breed</mat-label>-->
-  <!--<mat-select>-->
-    <!--<mat-option *ngFor="let breed of breedList" [value]="breed.name">-->
-      <!--{{breed.name}}-->
-    <!--</mat-option>-->
-  <!--</mat-select>-->
-<!--</mat-form-field>-->
+<mat-form-field>
+  <mat-select>
+    <mat-option *ngFor="let breed of breedList" [value]="breed.name">
+      {{breed.name}}
+    </mat-option>
+  </mat-select>
+</mat-form-field>
