--- a/CatApiMeow/src/app/templates/search.component.html
+++ b/CatApiMeow/src/app/templates/search.component.html
@@ -1,18 +1,19 @@
-<form #form="ngForm">
+<mat-card>
   <mat-form-field>
     <mat-select>
       <mat-option
         *ngFor="let breed of breedList"
         [value]="breed.name"
-        (onSelectionChange)="getSearchResults($event.source.value)"
+        (onSelectionChange)="getSearchResults($event, $event.source.value)"
       >
         {{breed.name}}
       </mat-option>
     </mat-select>
   </mat-form-field>
   <mat-card>
-    <mat-card-header *ngFor="let selectedBreed of breed">
+    <mat-card-content *ngFor="let selectedBreed of breed">
       {{selectedBreed.name}}
-    </mat-card-header>
+
+    </mat-card-content>
   </mat-card>
-</form>
+</mat-card>
