--- a/CatApiMeow/src/app/templates/search.component.html
+++ b/CatApiMeow/src/app/templates/search.component.html
@@ -16,7 +16,10 @@
       {{selectedBreed.name}}
     </mat-card-content>
   </mat-card>
-  <mat-card *ngFor="let selectedImage of image">
-    <img mat-card-image src="{{selectedImage.url}}" alt="Photo of breed">
-  </mat-card>
+  <!--<mat-card *ngFor="let selectedImage of images">-->
+    <!--<img mat-card-image src="{{selectedImage.url}}" alt="Photo of breed">-->
+  <!--</mat-card>-->
+  <app-image-carousel
+  [images]="images">
+  </app-image-carousel>
 </mat-card>
