--- a/CatApiMeow/src/styles.scss
+++ b/CatApiMeow/src/styles.scss
@@ -23,6 +23,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   height: 300px;
 }
 
-mat-card {
-  margin: 5px;
+.card-with-nav-bar {
+  margin-top: 35px;
 }
