installed app wide naming convention:

--- a/CatApiMeow/src/app/templates/search.html
+++ b/CatApiMeow/src/app/templates/search.html
@@ -3,20 +3,18 @@
     <mat-select>
       <mat-option
         *ngFor="let breed of breedList"
-        [value]="breed.name"
-        [id]="breed.id"
+        [value]="breed.name" [id]="breed.id"
         (onSelectionChange)="getSearchResult($event, $event.source.value, $event.source.id)"
       >
         {{breed.name}}
       </mat-option>
     </mat-select>
   </mat-form-field>
-    <!--<mat-card-content *ngFor="let selectedBreed of breed">-->
-      <!--<mat-card-header>-->
-        <!--{{selectedBreed.name}}-->
-      <!--</mat-card-header>-->
-    <!--</mat-card-content>-->
-  <app-image-carousel
-    [images]="images">
+  <!--<mat-card-content *ngFor="let selectedBreed of breed">-->
+  <!--<mat-card-header>-->
+  <!--{{selectedBreed.name}}-->
+  <!--</mat-card-header>-->
+  <!--</mat-card-content>-->
+  <app-image-carousel [images]="images">
   </app-image-carousel>
 </mat-card>
