--- a/CatApiMeow/src/app/templates/navBar.html
+++ b/CatApiMeow/src/app/templates/navBar.html
@@ -2,5 +2,6 @@
   <nav class="f6 fw6 ttu tracked">
     <a class="link dim white dib mr3" href="/home" title="Home">Home</a>
     <a class="link dim white dib mr3" href="/search" title="About">Search</a>
+    <a class="link dim white dib mr3" href="/favourites" title="Favourites">Search</a>
   </nav>
 </header>
